--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <link rel="shortcut icon" href="https://codesandbox.io/favicon.ico">
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Code+Pro:500%7CRoboto:300,400,500,700%7CPoppins:300,400,500,600,700">
